--- a/public/styles.css
+++ b/public/styles.css
@@ -174,9 +174,9 @@ body {
     display: none;
     position: fixed;
     top: 60px;
-    right: 20px;
-    width: 300px;
-    background-color: #f1f1f1;
+    right: 300px;
+    width: 800px;
+    background-color: #949be8;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
     padding: 20px;
     border-radius: 5px;
