--- a/Westin_Capstone/public/styles.css
+++ b/Westin_Capstone/public/styles.css
@@ -157,41 +157,46 @@ body {
 
 .user-form button,
 .login-form button {
-    padding: 0.8rem;
-    background-color: var(--accent-color);
+    padding: 10px 20px;
+    background-color: var(--primary-color);
     color: var(--white);
     border: none;
-    border-radius: 4px;
+    border-radius: 25px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    font-weight: bold;
+    transition: var(--transition);
+    width: 100%;
 }
 
 .user-form button:hover,
 .login-form button:hover {
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
+    color: var(--white);
 }
 
 .close-form {
     width: 100%;
-    padding: 0.8rem;
-    background-color: var(--secondary-color);
+    padding: 10px 20px;
+    background-color: var(--primary-color);
     color: var(--white);
     border: none;
-    border-radius: 4px;
+    border-radius: 25px;
     cursor: pointer;
+    font-weight: bold;
+    transition: var(--transition);
     margin-top: 1rem;
-    transition: background-color 0.3s ease;
 }
 
 .close-form:hover {
     background-color: var(--accent-color);
+    color: var(--white);
 }
 
 /* Items Grid */
 #itemsGrid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 30px;
+    gap: 40px 10px;
     padding: 100px 20px 20px;
     max-width: 1200px;
     margin: 0 auto;
